--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+      </svg>
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
@@ -14,6 +18,23 @@
            <img src="images/imageries/logo/ohmyfood.png">  
         </p>
     </header>
+
+<main>
+    <div class="location">
+        <i class="bi bi-geo-alt-fill"></i>
+        <h1>Paris, Belleville</h1>
+    </div>
+</main>
+
+
+
+
+
+
+
+
+
+
 
 
 
