--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
     </div>
 </main>
 
+<section id="decouverte">
+    <h2>Reservez le menu qui <br/>vous convient</h2>
+    <p class="choix">Decouvrez des restaurants déxception,<br/>selectionnes par nos soins</p>
+    <button>
+      <p class="explorez"> Explorez nos restaurants</p>
+    </button>
 
+</section>
 
 
 
