--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
-      </svg>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"></svg>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -28,11 +25,14 @@
 
 <section id="decouverte">
     <h2>Reservez le menu qui <br/>vous convient</h2>
-    <p class="choix">Decouvrez des restaurants déxception,<br/>selectionnes par nos soins</p>
+    <p>Decouvrez des restaurants déxception,
+         selectionnes par nos soins</p>
     <button>
-      <p class="explorez"> Explorez nos restaurants</p>
+       Explorez nos restaurants
     </button>
-
+<div class="gradient">
+    
+</div>
 </section>
 
 
