--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
     <button>
        Explorez nos restaurants
     </button>
-<div class="gradient">
-    
-</div>
 </section>
 
-
+<section class="tuto">
+    
+    <h2>Fonctionnement</h2>
+<ol>
+    <li>Choisissez votre restaurant</li>
+    <li>Composez votre menu</li>
+    <li>Degustez au restaurant</li>
+<ol>
+</section>
 
 
 
