--- a/index.html
+++ b/index.html
@@ -4,53 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"></svg>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stle.css">
     <title>Document</title>
 </head>
 <body>
     
-    <header>
-        <p class="homy-logo">
-           <img src="images/imageries/logo/ohmyfood.png">  
-        </p>
-    </header>
-
-<main>
-    <div class="location">
-        <i class="bi bi-geo-alt-fill"></i>
-        <h1>Paris, Belleville</h1>
-    </div>
-</main>
-
-<section id="decouverte">
-    <h2>Reservez le menu qui <br/>vous convient</h2>
-    <p>Decouvrez des restaurants déxception,
-         selectionnes par nos soins</p>
-    <button>
-       Explorez nos restaurants
-    </button>
-</section>
-
-<section class="tuto">
-    
-    <h2>Fonctionnement</h2>
-<ol>
-    <li>Choisissez votre restaurant</li>
-    <li>Composez votre menu</li>
-    <li>Degustez au restaurant</li>
-<ol>
-</section>
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
